add the ability to see cats
Co-authored-by: Thomas Friedrichs <friedrichs.tommy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -15,20 +15,26 @@
     <button class="btn btn-primary" id="hello">Say "hello"</button>
     <button class="btn btn-inverse" id="goodbye">Say "goodbye"</button>
     <button class="btn btn-danger" id="stop">Say "stop copying me!"</button>
+    <button class="btn btn-dark" id="img">Show a cat</button>
 
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-4">
         <h2>You said:</h2>
         <ul id="user">
 
         </ul>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-4">
         <h2>The web page said back:</h2>
         <ul id="webpage">
 
         </ul>
+      </div>
+
+      <div class="col-md-4">
+        <h2 id="img">the webpage shows</h2>
+        
       </div>
     </div>
   </div>
